--- a/README.html
+++ b/README.html
@@ -1,14 +1,14 @@
 # WAMOD
 A chrome extention to implement Gb mode on web.whatsapp.com
 
-# HOW TO INSTALL\n
-1 Download the repository\n
-2 Open chrome and go to extensions or just type in the search bar *chrome://extentions*\n
-3 Turn on developer mode\n
+# HOW TO INSTALL
+1 Download the repository
+2 Open chrome and go to extensions or just type in the search bar *chrome://extentions*
+3 Turn on developer mode
 4 drage the WAMOD folder on the browser screen and release\n
-5 visit web.whatsapp.com\n
+5 visit web.whatsapp.com
 
-have fun\n
+have fun
 
 `would also like for other developers to contribut to this project`
 
